--- a/main-firmware/Cargo.toml
+++ b/main-firmware/Cargo.toml
@@ -37,3 +37,6 @@ cortex-m-rt = "0.7.0"
 embedded-alloc = "0.5.0"
 static_cell = "1.1"
 futures = { version = "0.3.5", default-features = false }
+
+[profile.release]
+debug = 2
