--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,12 @@
   "rust-analyzer.check.allTargets": false,
   "rust-analyzer.check.extraArgs": [
     "--target", "thumbv7em-none-eabihf"
+  ],
+  "cSpell.words": [
+    "Anolis",
+    "Intan",
+    "Setebos",
+    "Würth",
+    "YFFR"
   ]
 }
