--- a/firmware/dongle/Cargo.toml
+++ b/firmware/dongle/Cargo.toml
@@ -15,6 +15,8 @@ nightly = [
 ]
 
 [dependencies]
+ble-service = { version = "0.1.0", path = "../ble-service" }
+
 # Embassy Packages
 embassy-futures = { version = "0.1.0" }
 embassy-executor = { version = "0.3.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
