--- a/firmware/dongle/Cargo.toml
+++ b/firmware/dongle/Cargo.toml
@@ -15,8 +15,6 @@ nightly = [
 ]
 
 [dependencies]
-ble-service = { version = "0.1.0", path = "../ble-service" }
-
 # Embassy Packages
 embassy-futures = { version = "0.1.0" }
 embassy-executor = { version = "0.3.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
@@ -26,7 +24,7 @@ embassy-sync = { version = "0.4.0" }
 embassy-usb = { version = "0.1.0", features = ["msos-descriptor"] }
 
 # nRF Softdevice
-nrf-softdevice = { version = "0.1.0", features = ["nightly", "defmt", "nrf52840", "s140", "ble-peripheral", "ble-central", "ble-gatt-server", "critical-section-impl"] }
+nrf-softdevice = { version = "0.1.0", features = ["nightly", "defmt", "nrf52840", "s140", "ble-central", "ble-gatt-client", "evt-max-size-512", "critical-section-impl"] }
 nrf-softdevice-s140 = { version = "0.1.1" }
 
 # Other
@@ -38,3 +36,4 @@ cortex-m = { version = "0.7.6", features = ["inline-asm"] }
 cortex-m-rt = "0.7.0"
 static_cell = "1.1"
 futures = { version = "0.3.5", default-features = false }
+enum_dispatch = "0.3.12"
