--- a/firmware/Cargo.toml
+++ b/firmware/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["brain-interface", "dongle"]
+members = ["brain-interface", "dongle", "data-channel"]
 resolver = "2"
 
 [patch.crates-io]
