--- a/firmware/brain-interface/Cargo.toml
+++ b/firmware/brain-interface/Cargo.toml
@@ -14,6 +14,8 @@ nightly = [
 ]
 
 [dependencies]
+data-channel = { version = "0.1.0", path = "../data-channel" }
+
 # Embassy Packages
 embassy-futures = { version = "0.1.0" }
 embassy-executor = { version = "0.3.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
@@ -22,7 +24,7 @@ embassy-time = { version = "0.1.2", features = ["defmt", "defmt-timestamp-uptime
 embassy-sync = { version = "0.4.0" }
 
 # nRF Softdevice
-nrf-softdevice = { version = "0.1.0", features = ["nightly", "defmt", "nrf52840", "s140", "ble-peripheral", "ble-gatt-server", "evt-max-size-512", "critical-section-impl"] }
+nrf-softdevice = { version = "0.1.0", features = ["nightly", "defmt", "nrf52840", "s140", "ble-peripheral", "ble-l2cap", "evt-max-size-512", "critical-section-impl"] }
 nrf-softdevice-s140 = { version = "0.1.1" }
 
 # Other
