--- a/firmware/dongle/Cargo.toml
+++ b/firmware/dongle/Cargo.toml
@@ -15,6 +15,8 @@ nightly = [
 ]
 
 [dependencies]
+data-channel = { version = "0.1.0", path = "../data-channel" }
+
 # Embassy Packages
 embassy-futures = { version = "0.1.0" }
 embassy-executor = { version = "0.3.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
@@ -24,7 +26,7 @@ embassy-sync = { version = "0.4.0" }
 embassy-usb = { version = "0.1.0", features = ["msos-descriptor"] }
 
 # nRF Softdevice
-nrf-softdevice = { version = "0.1.0", features = ["nightly", "defmt", "nrf52840", "s140", "ble-central", "ble-gatt-client", "evt-max-size-512", "critical-section-impl"] }
+nrf-softdevice = { version = "0.1.0", features = ["nightly", "defmt", "nrf52840", "s140", "ble-central", "ble-l2cap", "evt-max-size-512", "critical-section-impl"] }
 nrf-softdevice-s140 = { version = "0.1.1" }
 
 # Other
@@ -35,5 +37,5 @@ critical-section = "1.1.2"
 cortex-m = { version = "0.7.6", features = ["inline-asm"] }
 cortex-m-rt = "0.7.0"
 static_cell = "1.1"
+embedded-alloc = "0.5.0"
 futures = { version = "0.3.5", default-features = false }
-enum_dispatch = "0.3.12"
