--- a/firmware/dongle/Cargo.toml
+++ b/firmware/dongle/Cargo.toml
@@ -26,7 +26,7 @@ embassy-sync = { version = "0.4.0" }
 embassy-usb = { version = "0.1.0", features = ["msos-descriptor"] }
 
 # nRF Softdevice
-nrf-softdevice = { version = "0.1.0", features = ["nightly", "defmt", "nrf52840", "s140", "ble-central", "ble-l2cap", "evt-max-size-512", "critical-section-impl"] }
+nrf-softdevice = { version = "0.1.0", features = ["nightly", "defmt", "nrf52840", "s140", "ble-central", "ble-gatt-client", "ble-l2cap", "evt-max-size-512", "critical-section-impl"] }
 nrf-softdevice-s140 = { version = "0.1.1" }
 
 # Other
