--- a/firmware/dongle/Cargo.toml
+++ b/firmware/dongle/Cargo.toml
@@ -23,7 +23,7 @@ embassy-executor = { version = "0.3.0", features = ["arch-cortex-m", "executor-t
 embassy-nrf = { version = "0.1.0", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time", "nfc-pins-as-gpio"] }
 embassy-time = { version = "0.1.2", features = ["defmt", "defmt-timestamp-uptime"] }
 embassy-sync = { version = "0.4.0" }
-embassy-usb = { version = "0.1.0", features = ["msos-descriptor"] }
+embassy-usb = { version = "0.1.0" }
 
 # nRF Softdevice
 nrf-softdevice = { version = "0.1.0", features = ["nightly", "defmt", "nrf52840", "s140", "ble-central", "ble-gatt-client", "ble-l2cap", "evt-max-size-512", "critical-section-impl"] }
