--- a/pcb/ibom.config.ini
+++ b/pcb/ibom.config.ini
@@ -13,8 +13,8 @@ layer_view=FB
 compression=1
 open_browser=0
 [general]
-bom_dest_dir=bom
-bom_name_format=ibom
+bom_dest_dir=.
+bom_name_format=anolis-brain-interface-ibom
 component_sort_order=C,R,L,D,U,Y,X,F,SW,A,~,HS,CNN,J,P,NT,MH
 component_blacklist=
 blacklist_virtual=1
