--- a/firmware/brain-interface/Cargo.toml
+++ b/firmware/brain-interface/Cargo.toml
@@ -7,10 +7,6 @@ edition = "2021"
 default = ["nightly"]
 nightly = [
   "embassy-executor/nightly",
-  "embassy-nrf/nightly",
-  "embassy-nrf/unstable-traits",
-  "embassy-time/nightly",
-  "embassy-time/unstable-traits",
 ]
 
 [dependencies]
@@ -18,13 +14,13 @@ data-channel = { version = "0.1.0", path = "../data-channel" }
 
 # Embassy Packages
 embassy-futures = { version = "0.1.0" }
-embassy-executor = { version = "0.3.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
+embassy-executor = { version = "0.4.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
 embassy-nrf = { version = "0.1.0", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time", "nfc-pins-as-gpio"] }
-embassy-time = { version = "0.1.2", features = ["defmt", "defmt-timestamp-uptime"] }
+embassy-time = { version = "0.2.0", features = ["defmt", "defmt-timestamp-uptime"] }
 embassy-sync = { version = "0.4.0" }
 
 # nRF Softdevice
-nrf-softdevice = { version = "0.1.0", features = ["nightly", "defmt", "nrf52840", "s140", "ble-peripheral", "ble-gatt-server", "ble-l2cap", "evt-max-size-512", "critical-section-impl"] }
+nrf-softdevice = { version = "0.1.0", features = ["defmt", "nrf52840", "s140", "ble-peripheral", "ble-gatt-server", "ble-l2cap", "evt-max-size-512", "critical-section-impl"] }
 nrf-softdevice-s140 = { version = "0.1.1" }
 
 # Other
